# LinuxGUI

./: .gitignore  AppSettings.h  CMakeLists copy.txt  CMakeLists.txt  CMakeLists1.txt  ConfigTab.cpp  ConfigTab.h  ContainerManager.cpp  ContainerManager.h  CustomEvents.h  CustomStatusBar.cpp  CustomStatusBar.h  CustomTitleBar.cpp  CustomTitleBar.h  CustomizeTab.cpp  CustomizeTab.h  DesktopTab.cpp  DesktopTab.h  DockerTransfer.cpp  DockerTransfer.h  FilesystemSelectionDialog.cpp  FilesystemSelectionDialog.h  FlatpakStore.cpp  FlatpakStore.h  ISOExtractor.cpp  ISOExtractor.h  ISOReader.cpp  ISOReader.h  LinuxGUI_2.7z  LinuxGUI_3.7z  LinuxGUI_4.7z  LinuxTerminalPanel.cpp  LinuxTerminalPanel.h  MainFrame.cpp  MainFrame.h  MongoDBPanel.cpp  MongoDBPanel.h  MyButton.h  OSDetector.cpp  OSDetector.h  (+49 more)
backup/: desktop.ini
iso/: metadata.txt
